# YOLOs-CPP

./: CMakeLists.txt  README.md  build.sh
include/: YOLO10.hpp
src/: camera_inference.cpp  image_inference.cpp  video_inference.cpp
